<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ice_white"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/image_article_widget"
        android:src="@drawable/wh_icon"
        android:contentDescription="@string/image_article_widget"
        android:scaleType="centerCrop"
        android:layout_width="100dp"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/about_button_widget_advice"
        android:textColor="#2a363b"
        android:textSize="12sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:background="@mipmap/ic_next_button" />


</LinearLayout>